<resources>
    <string name="app_name">Droids</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="application_parse_id">D0zY2DX9zLA7cvZdUofD521deKugqKYvMi7ETS7g</string>
    <string name="client_parse_id">IzfeVdMk45rur0Jj8gGQ9pYZbaYD02eflE1NhuA0</string>
    <string name="no_droids">There are no droids</string>
    <string name="droid">Droid</string>
    <string name="key_title">title</string>
    <string name="key_content">content</string>
    <string name="update">Update</string>
    <string name="error">Error occurs</string>
    <string name="nothing_to_update">Everything is up-to-date</string>
    <string name="key_id">objectId</string>
    <string name="action_parse">Action</string>
    <string name="app_running">app_running</string>
    <string name="no_internet">No internet connection</string>
    <string name="context_menu_delete_droid">Delete this droid</string>
    <string name="context_menu_update_droid">Update this droid</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="check_string">The length of username and password is less than 8 or email is invalid</string>
    <string name="loading">Loading...</string>
    <string name="email">Email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="success_account">Your account has been created successfully</string>
    <string name="fail_account">Error occurs, maybe your email has been used</string>
    <string name="fail_login">Username or Password is wrong</string>
</resources>
