<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_margin="16dp"
            android:id="@+id/icon"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_android_white_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.course.com.sync_adapter.view.CustomEditText
            android:layout_marginTop="12dp"
            android:layout_below="@+id/icon"
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/user_name"
            android:inputType="textNoSuggestions"
            android:textColorHint="#90ffffff"
            android:textColor="@android:color/white">
            <requestFocus />
        </android.course.com.sync_adapter.view.CustomEditText>

        <android.course.com.sync_adapter.view.CustomEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#90ffffff"
            android:textColor="@android:color/white" />

        <android.course.com.sync_adapter.view.CustomEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            android:inputType="textNoSuggestions"
            android:textColorHint="#90ffffff"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginBottom="48dp"
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/primary_color_light"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>